--- a/.gitattributes
+++ b/.gitattributes
@@ -8,3 +8,4 @@
 *.mov filter=lfs diff=lfs merge=lfs -text
 *.pdf filter=lfs diff=lfs merge=lfs -text
 *.gif filter=lfs diff=lfs merge=lfs -text
+*.stl filter=lfs diff=lfs merge=lfs -text
