--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build": "cross-env ELEVENTY_ENV=production eleventy",
     "clean": "del-cli _epub _site public",
     "debug": "cross-env DEBUG=Eleventy* eleventy --dryrun",
-    "dev": "cross-env ELEVENTY_ENV=development eleventy --serve",
+    "dev": "cross-env ELEVENTY_ENV=development; NODE_OPTIONS='--max-old-space-size=8192' eleventy --serve",
     "lint": "eslint --ext .js --ignore-path .gitignore .",
     "lint:fix": "npm run lint -- --fix",
     "prebuild": "npm run clean",
